--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,3 +10,6 @@ steps:
       - --entry-point=hello_gcs
       - --trigger-http
       - --runtime=python3.10
+  - options:
+    logging:
+      - CLOUD_LOGGING_ONLY
