--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,5 @@
 steps:
-  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
-    args:
-      - "gcloud"
-      - "functions"
-      - "deploy"
-      - "function-1"
-      - "--region"
-      - "us-central1"
-      - --source
-      - .
-      - "--entry-point"
-      - "hello_gcs"
-      - "--trigger-http"
-      - "--runtime"
-      - "python3.10"
+  - name: "gcr.io/cloud-builders/gcloud"
+    args: ["functions", "deploy", "function-1", "--source=."]
 options:
   logging: CLOUD_LOGGING_ONLY
