New code for cloudbuild.yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,5 +5,9 @@ steps:
       - functions
       - call
       - function-1
+      - --region
+      - us-central1
+      - --data
+      - '{}'
 options:
   logging: CLOUD_LOGGING_ONLY
