Create a new folder for datasets and updated the path of the CSV file in yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,11 @@
 steps:
+   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+    args:
+      - gsutil
+      - cp
+      - datasets/cleaned_data_2k_lines.csv
+      - gs://output_buc1
+
   # - name: gcr.io/google.com/cloudsdktool/cloud-sdk
   #   args:
   #     - gcloud
@@ -9,11 +16,6 @@ steps:
   #     - us-central1
   #     - --data
   #     - "{}"
-  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
-    args:
-      - gsutil
-      - cp
-      - cleaned_data_2k_lines.csv
-      - gs://output_buc1
+ 
 options:
   logging: CLOUD_LOGGING_ONLY
