--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
-  # - name: gcr.io/google.com/cloudsdktool/cloud-sdk
-  #   args:
-  #     - gsutil
-  #     - cp
-  #     - datasets/cleaned_data_2k_lines.csv
-  #     - gs://output_buc1
+  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+    args:
+      - gsutil
+      - cp
+      - datasets/cleaned_data_2k_lines.csv
+      - gs://output_buc1
 
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     args:
