--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,20 +1,27 @@
 steps:
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     args:
-      - gsutil
-      - cp
-      - datasets/cleaned_data_2k_lines.csv
-      - gs://output_buc1
+      - /bin/bash
+      - -c
+      - |
+        DATE=$(date '+%d-%m-%y')
+        gsutil cp datasets/cleaned_data_2k_lines.csv gs://output_buc1/cleaned_data_2k_lines-${DATE}.csv
+      # - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+      #   args:
+      #     - gsutil
+      #     - cp
+      #     - datasets/cleaned_data_2k_lines.csv
+      #     - gs://output_buc1
 
-  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
-    args:
-      - gcloud
-      - functions
-      - call
-      - function-1
-      - --region
-      - us-central1
-      - --data
+      # - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+      #   args:
+      #     - gcloud
+      #     - functions
+      #     - call
+      #     - mlops-function
+      #     - --region
+      #     - us-central1
+      #     - --data
       - "{}"
 options:
   logging: CLOUD_LOGGING_ONLY
