--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+    entrypoint: "bash"
     args:
-      - /bin/bash
-      - -c
+      - "-c"
       - |
         DATE=$(date '+%d-%m-%y')
         gsutil cp datasets/cleaned_data_2k_lines.csv gs://output_buc1/cleaned_data_${DATE}.csv
