Added time to the file name as well

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
         # Get today's date
         export TZ=Asia/Kolkata
         current_date=$(date +%d-%m-%y)
-        time=$(date '+%H-%M-%S')
+        time=$(date '+%I-%M%p')
         filename="cleaned_data_${time}_${current_date}.csv"
         gsutil cp datasets/cleaned_data_2k_lines.csv gs://output_buc1/${filename}.csv
 
